# chromatoPy

./: .gitignore  README.md  chromatopy.spec  chromatopy.spec copy  chromatopy_gen.spec  hplc_integration_gen.py  integration_profile.out  pyproject.toml  setup.py  test.py  voltages.csv
.github/workflows/: publish.yml
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
Data Input Templates/: GC-FID template.txt
ensemble tools/: ensemble_functions.py
misc/: directory_structure.txt
src/chromatopy/: GDGT_compounds.py  __init__.py  __main__.py  assign_indices.py  calculate_indices.py  calculate_raberg2021_indices.py  chromatoPy app documentation.docx  chromatoPy package documentation.docx  chromatoPy.py  chromatoPy_base.py  chromatoPy_front_ui.py  chromatoPy_front_ui_gen.py  chromatoPy_preprocess.py  chromatopy_gen.py  chromatopy_introduction.py  compounds.py  details.txt  hplc_integration.py  hplc_integration_gen.py  hplc_to_csv.py  messages.py  setup.py
src/chromatopy.dist-info/: METADATA  top_level.txt
src/chromatopy/.spyproject/config/: workspace.ini
src/chromatopy/FID/: FID_General.py  FID_Integration_functions.py  FID_Integration_gen.py  FID_integration.py  Tools.py  __init__.py  bouqueter.py  import_data.py  manual_peak_integration.py  peak_labels.json  peak_labels_editor.py
src/chromatopy/IRMS/: 24414__C18 200ng C24 200ng_20250501-0000_block_index.csv  dxf_reader.py  pysoread.py
src/chromatopy/config/: GDGT_configuration.py  Integration_Settings.py  Plot_Settings.py  chromatoPy_front_ui.py  integration_settings.json  plot_settings.json
src/chromatopy/utils/: GDGT_compounds.py  GDGT_configuration.py  Integration_configuration.py  chromatopy_gdgt_config.json  folder_handling.py  gdgt_meta.json  gdgt_meta_default.json  gdgt_settings.py  integration_settings.json  integration_settings.py
src/chromatopy/utils/errors/: smoothing_check.py
