[tool.poetry]
name = "chromatopy-app"
version = "1.0.0"
description = "Peak integration software."
authors = ["Dr. Gerard Otiniano <gerardotiniano@gmail.com>", "Dr. Elizabeth Thomas"]
readme = "README.md"
packages = [{include = "chromatopy", from = "src"}]
include = ["src/chromatopy/config/chromatopy_gdgt_config.json"]

[tool.poetry.scripts]
chromatopy = "chromatopy.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy           = "^2"
pandas          = "^2.2.3"
scipy           = "^1.15.3"
scikit-learn    = "^1.6.1"
matplotlib      = "^3.10.0"
pybaselines     = "^1.2"
tqdm            = "^4.66"
toga            = "0.5.1"
rainbow-api     = "1.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"