[tool.poetry]
name = "chromatopy-app"
version = "1.0.0"
description = "Peak integration software."
authors = ["Dr. Gerard Otiniano <gerardotiniano@gmail.com>", "Dr. Elizabeth Thomas"]
readme = "README.md"
packages = [{include = "chromatopy", from = "src"}]
include = ["src/chromatopy/config/chromatopy_gdgt_config.json"]

[tool.poetry.scripts]
chromatopy = "chromatopy.__main__:main"

[tool.poetry.dependencies]
#python = ">=3.10,<3.13"
#numpy           = "^2"
#pandas          = "^2.2.3"
#scipy           = "^1.15.3"
#scikit-learn    = "^1.6.1"
#matplotlib      = "^3.10.0"
#pybaselines     = "^1.2"
#tqdm            = "^4.66"
#toga            = "0.5.1"
#rainbow-api     = "1.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
project_name = "chromatopy-app"
bundle = "com.otiniano.chromatopy"
version = "1.0.0"
description = "Peak integration software."
author = "Dr. Gerard Otiniano"
author_email = "gerardotiniano@gmail.com"
license = { file = "LICENSE" }
home_page = "https://github.com/gerardotiniano/chromatopy"

[tool.briefcase.app.chromatopy]
formal_name = "chromatopy"
description = "Peak integration software for GDGT analysis"
sources = ["src/chromatopy"]
entry_point = "chromatopy.__main__:main"
icon = "chromatopy_icon"
python_version = "3.10"
requires = [
  "scipy==1.8rc1",
  "pybaselines==1.2.0",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.7,<4.0",
  "tqdm>=4.66,<5.0",
  "toga==0.5.2",]
